# lgd-mel

./: README.md  pyproject.toml
bipp/lgd/: algorithms.py  api.py  logic.py  models.py  types.py
corpus/: blocks.parquet  districts.parquet  states.parquet  sub_districts.parquet  villages.parquet
notebooks/: seed_db.ipynb
tests/: test_lgd_mel.py
