[tool.poetry]
name = "lgd"
version = "0.1.0"
description = ""
authors = ["Saurabh Harak", "Vijay Kumar"]
packages = [
    { include = "bipp" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
autopep8 = "^2.0.2"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"