[tool.poetry]
name = "lgd"
version = "0.2.1"
description = ""
authors = ["Harmanpreet Kaur", "Vijay Kumar"]
packages = [
    { include = "bipp" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
sqlmodel = ">=0.0.8"
polars = "^0.19.19"
connectorx = "^0.3.2"
fastapi = ">=0.96.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
autopep8 = "^2.0.2"
ipykernel = "^6.22.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"